<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:id="@+id/tv1"
        android:text="@string/CreateASong"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14pt"
        android:id="@+id/tv2"
        android:text="@string/Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et1"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        app:layout_constraintLeft_toRightOf="@+id/tv2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14pt"
        android:id="@+id/tv3"
        android:text="@string/Artist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et2"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et2"
        app:layout_constraintLeft_toRightOf="@+id/tv3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14pt"
        android:id="@+id/tv4"
        android:text="@string/Year"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et3"
        app:layout_constraintTop_toBottomOf="@+id/tv3"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et3"
        app:layout_constraintLeft_toRightOf="@+id/tv4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et2"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:text="@string/btnCreate"
        android:layout_marginHorizontal="2px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>